# doc-counter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  brute.h  count_test.cpp  doc_counter.cpp  ilcp.h  rmq.h  rmq_on.cpp  rmq_test.cpp  sada_count.h  sada_sparse_count.h  sais.cpp  small-rmq.h  small-rmq_test.cpp  sparse-int-array.h  suffix-array.cpp  suffix-array.h  suffix-array_test.cpp
